--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,6 +12,13 @@
  <% @post.errors.full_messages_for(:description).each do |message| %>
  <div><%= message %></div>
 <% end %>
-
+<br>
+<div class="form-group">
+  <% if @post.image.attached? %>
+   <%= image_tag @post.image, style: "width: 200px; display: block" %>
+   <% end %>
+   <%= f.label :image %>
+   <%= f.file_field :image, class: "form-control" %>
+ </div>
 <%= f.submit %>
  <% end %>
