--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,7 @@
 <h1>Edit Post </h1>
-<%= render 'form' %>
+ <%if @post.user == current_user%>
+    <%= render 'form' %>
+    <%else%>
+      <%=flash = "You are not Authorized"%>
+<% end %>
+
