--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,3 +11,9 @@
 
 <%= link_to "Edit Post", edit_post_path(@post) %>
 <%= button_to "Delete", post_path(@post), method: :delete %>
+
+<h3>Comments</h3>
+<%= render @post.comments%>
+
+<h3>Add a comment:</h3>
+<%= render 'comments/form' %>
