--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,11 +1,11 @@
 <h1>Edit Comment </h1>
 <%= form_with model: [@comment.post,@comment] do |form| %>
   <p>
-    <%= form.label :commenter %><br>
+    <%= form.label :Name %><br>
     <%= form.text_field :commenter %>
   </p>
   <p>
-    <%= form.label :body %><br>
+    <%= form.label :Comment %><br>
     <%= form.text_area :body %>
   </p>
   <p>
