--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,24 +1,45 @@
-<%= form_with model: @post do |f| %>
- <%= f.label :title %><br>
- <%= f.text_field :title %> <br>
- <br>
- <% @post.errors.full_messages_for(:title).each do |message| %>
- <div><%= message %></div>
- <% end %>
 
- <%= f.label :Description %><br>
- <%= f.text_area :description %><br>
- <br>
- <% @post.errors.full_messages_for(:description).each do |message| %>
- <div><%= message %></div>
-<% end %>
-<br>
-<div class="form-group">
-  <% if @post.image.attached? %>
-   <%= image_tag @post.image, style: "width: 200px; display: block" %>
-   <% end %>
-   <%= f.label :image %>
-   <%= f.file_field :image, class: "form-control" %>
- </div>
-<%= f.submit %>
- <% end %>
+<!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Create Post</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <%= form_with model: @post do |f| %>
+            <%= f.label :title %><br>
+            <%= f.text_field :title %> <br>
+            <br>
+            <% @post.errors.full_messages_for(:title).each do |message| %>
+            <div><%= message %></div>
+            <% end %>
+
+            <%= f.label :Description %><br>
+            <%= f.text_area :description %><br>
+            <br>
+            <% @post.errors.full_messages_for(:description).each do |message| %>
+            <div><%= message %></div>
+            <% end %>
+            <br>
+            <div class="form-group">
+            <% if @post.image.attached? %>
+              <%= image_tag @post.image, style: "width: 200px; display: block" %>
+              <% end %>
+              <%= f.label :image %>
+              <%= f.file_field :image, class: "form-control" %>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+          <% end %>
+    </div>
+  </div>
+</div>
