--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,9 @@
 <h1>Edit Post </h1>
  <%if @post.user == current_user%>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Edit
+    </button>
     <%= render 'form' %>
-    <%else%>
+    <% else %>
       <%=flash = "You are not Authorized"%>
 <% end %>
-
