--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,18 @@
 <h1><%= @post.title %> </h1>
-<div>
-  <%= @post.description %>
-</div>
+ <div>
+   <%= @post.description %>
+ </div>
 <br>
 <% if @post.image.attached?%>
-  <p>
+   <p>
     <%= image_tag @post.image.variant(resize: "250x250") %>
-  </p>
-  <% end %>
+   </p>
+<% end %>
 
-<%= link_to "Edit Post", edit_post_path(@post) %>
-<%= button_to "Delete", post_path(@post), method: :delete %>
+<%= link_to "Edit Post", edit_post_path(@post)%>
+<%= button_to "Delete", post_path(@post), method: :delete, remote: true %>
 
-<h3>Comments</h3>
+<h3>Comments:</h3>
 <%= render @post.comments%>
-
 <h3>Add a comment:</h3>
 <%= render 'comments/form' %>
