--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,37 +9,42 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
+
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-   <nav class="navbar expand navbar-dark bg-dark" bg-light justify-content-between">
+   <nav class="navbar sticky-top navbar-dark bg-dark">
     <a class="navbar-brand" href="http://localhost:3000/" >Home</a>
-     <%= form_tag(search_path, method: 'get') do %>
-      <div class= "input-goup">
-        <%=search_field_tag :search, params[:search], placeholder: 'Search', class:"form-control"%>
+      <%= form_tag(search_path, method: 'get') do %>
+         <div class= "input-goup">
+           <%=search_field_tag :search, params[:search], placeholder: 'Search', class:"form-control"%>
            <div class= "input-group-btn">
               <%= button_tag "Submit", class: 'btn btn-primary', :name => nil %>
            </div>
-      </div>
-     <% end %>
+         </div>
+      <% end %>
    </nav>
 
-  <div id="header">
-    <h1>Welcome to the SNS World</h1>
-    <h3>Blogs powered by Ruby on Rails</h3>
-  </div>
+   <header class="masthead text-center text-black">
+    <div class="masthead-content">
+        <div class="container px-5">
+              <% if user_signed_in? %>
+              Logged in as <strong><%= current_user.email %></strong>.
+              <%= link_to 'Edit profile', edit_user_registration_path %>
+              <% end %><br>
+            <h1 class="masthead-heading mb-0">Welcome to the SNS World</h1>
+            <h3 class="masthead-subheading mb-0">Blogs powered by Ruby on Rails</h3>
+        </div>
+    </div>
+   </header>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
 
-    <% if user_signed_in? %>
-    Logged in as <strong><%= current_user.email %></strong>.
-    <%= link_to 'Edit profile', edit_user_registration_path %>
-    <% end %><br>
+   <p class="notice"><%= notice %></p>
+   <p class="alert"><%= alert %></p>
 
-  <%= yield %>
 
+   <%= yield %>
   </body>
 </html>
