--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,24 @@
 <%= link_to "New Post", new_post_path %>
 <br>
-<% @posts.each do |post| %>
-   <h2> <%= post.title %> </h2>
-   <div> <%= truncate(post.description,:length => 10) %> </div>
-   <br>
-  <div class="form-group">
-    <% if post.image.attached? %>
-    <%= image_tag post.image, style: "width: 200px; display: block" %>
-    <% end %>
-  </div>
- <%= link_to "Read Post", post %>
-   <br/>
-<%end%>
+<div class="row">
+ <% @posts.each do |post| %>
+    <div class="card col-3">
+            <div class="card" style="width: 100%;">
+              <%if post.image.attached?%>
+                 <img src = <%= url_for(post.image) %> class="card-img-top" alt="Card image cap" >
+              <% end %>
+              <div class="card-body">
+                <h5 class="card-title"><%= post.title %></h5>
+                <p class="card-text"><%= truncate(post.description,:length => 10) %></p>
+                <%= link_to "Read Post", post %>
+              </div>
+            </div>
+    </div>
+  <%end%>
+</div>
 
 <% if current_user %>
-<div class="actions">
+  <div class="actions">
     <%= button_to "logout", destroy_user_session_path, method: :delete , class: 'btn btn-primary' %>
-</div>
+  </div>
 <% end %>
