Front end design using bootstrap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,17 +14,6 @@
  *= require_self
  */
 
+@import "./posts";
 @import "bootstrap/scss/bootstrap";
-
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
-}
-div#header {
-   text-align: center;
-   padding-bottom: 15px;
-}
-
-a:link, a:active, a:visited {
-   color: #CD0000;
-}
+@import "./custom.scss";
