--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-    <%= form_with model: [ @post, @post.comments.build] do |form| %>
+    <%= form_with model: [ @post, @post.comments.build], local: false do |form| %>
     <p>
     <%= form.label :Name %><br>
     <%= form.text_field :commenter %>
@@ -8,6 +8,6 @@
     <%= form.text_area :body %>
     </p>
     <p>
-    <%= form.submit %>
+    <%= form.submit id: 'hehe', class: 'sadas', data: { type: 'POST', url: post_comments_path(@post.id)} %>
     </p>
     <% end %>
