--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,19 +22,27 @@
    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" id="mainNav" >
       <div class="container">
           <a class="navbar-brand" href="http://localhost:3000/" >Home</a>
+            <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button"
+            data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
+            aria-expanded="false" aria-label="Toggle navigation">Menu
+                <i class="fas fa-bars"></i>
+            </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#posts">Posts</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
                     </ul>
                 </div>
               <%= form_tag(search_path, method: 'get') do %>
-                  <div class= "input-goup">
+                  <div class= "input-goup mb-1">
                     <%=search_field_tag :search, params[:search], placeholder: 'Search', class:"form-control"%>
-                    <div class= "input-group-btn">
-                      <%= button_tag "Submit", class: 'btn btn-primary', :name => nil %>
-                    </div>
                   </div>
+              <% end %>
+              <% if current_user %>
+                <div class="actions">
+                <%= button_to "logout", destroy_user_session_path, method: :delete , class: 'btn btn-primary' %>
+                </div>
               <% end %>
       </div>
    </nav>
@@ -42,7 +50,7 @@
    <header class="masthead text-center text-black">
     <div class="container d-flex align-items-center flex-column">
       <div class="masthead-content">
-          <img class="masthead-avatar mb-5" src="assets/img/WhatsApp Image 2021-05-06 at 12.42.43 PM.jpeg" alt="..." />
+          <img class="masthead-avatar mb-5" src="assets/avataaars.svg" alt="..." />
             <h1 class="masthead-heading text-uppercase mb-0">Welcome to the SNS World</h1>
               <% if user_signed_in? %>
               Logged in as <strong><%= current_user.email %></strong>.
@@ -58,8 +66,21 @@
                 <p class="masthead-subheading font-weight-light mb-0">Blogs powered by Ruby on Rails</p>
       </div>
     </div>
+
    </header>
-     <%= yield %>
+
+
+        <div class="container" id="posts">
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Posts</h2>
+        <!-- Icon Divider-->
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+         <%= yield %>
+        </div>
+
       <section class="page-section bg-primary text-white mb-0" id="about">
           <div class="container">
               <!-- About Section Heading-->
@@ -105,13 +126,6 @@
         <!-- Contact Section Form-->
         <div class="row justify-content-center">
             <div class="col-lg-8 col-xl-7">
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- * * SB Forms Contact Form * *-->
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- This form is pre-integrated with SB Forms.-->
-                <!-- To make this form functional, sign up at-->
-                <!-- https://startbootstrap.com/solution/contact-forms-->
-                <!-- to get an API token!-->
                 <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                     <!-- Name input-->
                     <div class="form-floating mb-3">
@@ -170,9 +184,9 @@
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <h4 class="text-uppercase mb-4">Location</h4>
                 <p class="lead mb-0">
-                    2215 John Daniel Drive
+                    13-A Commercial Block GL
                     <br />
-                    Clark, MO 65243
+                    Yousaf, Khan 65243
                 </p>
             </div>
             <!-- Footer Social Icons-->
