--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,12 @@
 <%= link_to "New Post", new_post_path %>
 <br>
-<div class="row">
+<br>
+<br>
+<div class="container">
+ <div class="row justify-content-center">
  <% @posts.each do |post| %>
-    <div id="del<%= post.id %>" class="card col-3"  >
-        <div class="card" style="width: 100%;">
+ <div class="card-deck mb-4 col-12 col-md-4">
+    <div id="del<%= post.id %>" class="card "  >
             <%if post.image.attached?%>
                 <img src = <%= url_for(post.image) %> class="card-img-top" alt="Card image cap" >
             <% end %>
@@ -16,13 +19,9 @@
                 <br>
                 <%= link_to "Read Post", post %>
               </div>
+              <div class="w-100"></div>
         </div>
     </div>
   <%end%>
+ </div>
 </div>
-
-<% if current_user %>
-  <div class="actions">
-    <%= button_to "logout", destroy_user_session_path, method: :delete , class: 'btn btn-primary' %>
-  </div>
-<% end %>
